--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -975,6 +975,9 @@
 			text-align: center;
 			padding: 5em 0 5em 0;
 			margin: 0;
+			.profilePic{
+				width: 30%;
+			}
 
 			h2 {
 				font-size: 2.25em;
