figured out css thing with background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2262,7 +2262,8 @@ input, select, textarea {
 
 			.main > .content.style1 {
 				/* background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #b39c68, #a56365, #412e4c); */
-				background: url("../../images/IMG_3622.jpg") no-repeat center, url("images/overlay.png"), linear-gradient(45deg, #b39c68, #a56365, #412e4c);
+				background: url("../../images/IMG_3622.jpg") no-repeat fixed center;
+				background-size: cover;
 			}
 
 			.main > .content.style2 {
