--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,8 +108,9 @@ input, select, textarea {
 		}
 
 	.dark {
-		color: #aaa;
-		color: rgba(255, 255, 255, 0.65);
+		/* color: #aaa; */
+		color: #666;
+		/* color: rgba(255, 255, 255, 0.65); */
 	}
 
 	input, textarea, select {
@@ -134,7 +135,8 @@ input, select, textarea {
 	}
 
 	.dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
-		color: #fff;
+		/* color: #fff; */
+		color: #666;
 	}
 
 	strong, b {
@@ -143,8 +145,9 @@ input, select, textarea {
 	}
 
 	.dark strong, .dark b {
-		color: #fff;
-		color: rgba(255, 255, 255, 0.85);
+		/* color: #fff; */
+		color: #666;
+		/* color: rgba(255, 255, 255, 0.85); */
 	}
 
 	em, i {
@@ -166,7 +169,8 @@ input, select, textarea {
 		}
 
 	.dark a {
-		color: #fff;
+		/* color: #fff; */
+		color: #666;
 		border-bottom-color: rgba(255, 255, 255, 0.5);
 	}
 
@@ -1626,7 +1630,8 @@ input, select, textarea {
 			border: 0;
 			box-shadow: inset 0 0 0 1px #e6e6e6;
 			border-radius: 100%;
-			color: #aaa;
+			/* color: #aaa; */
+			color: rgba(255, 255, 255, 0.15);
 		}
 
 			ul.icons a:hover {
@@ -2019,7 +2024,8 @@ input, select, textarea {
 		border-radius: 0.25em;
 		cursor: pointer;
 		border: 0;
-		color: #fff;
+		color: #3d3d3d;
+		/* color: #fff; */
 		text-align: center;
 		text-decoration: none;
 	}
@@ -2057,7 +2063,7 @@ input, select, textarea {
 	.dark .button {
 		background: rgba(255, 255, 255, 0.15);
 		box-shadow: inset 0 0 0 1px #fff;
-		color: #fff;
+		color: #4f4f4f;
 	}
 
 		.dark input[type="button"]:hover,
@@ -2135,6 +2141,7 @@ input, select, textarea {
 		background: rgba(255, 255, 255, 0.15);
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5);
 		color: #fff;
+		/* color: rgba(255, 255, 255, 0.15); */
 	}
 
 	.dark .feature-icon:before, .dark .feature-icon:after {
@@ -2166,7 +2173,7 @@ input, select, textarea {
 		}
 
 		.icon > .label {
-			display: none;
+			/* display: none; */
 		}
 
 		.icon.solid:before {
@@ -2267,11 +2274,15 @@ input, select, textarea {
 			}
 
 			.main > .content.style2 {
-				background: url("images/bgtr.svg") top right no-repeat, url("../../images/IMG_3622.jpg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #384955, #655361, #85505f);
+				/* background: url("images/bgtr.svg") top right no-repeat, url("../../images/IMG_3622.jpg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #384955, #655361, #85505f); */
+				background: url('../../images/IMG_3620.jpg') no-repeat fixed center;
+				background-size: cover;
 			}
 
 			.main > .content.style3 {
-				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #5f796b, #3a4e59, #2f394e);
+				/* background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #5f796b, #3a4e59, #2f394e); */
+				background: url('../../images/IMG_3619.jpg') no-repeat fixed center;
+				background-size: cover;
 			}
 
 			.main > .content.style4 {
@@ -2300,7 +2311,7 @@ input, select, textarea {
 			}
 
 		#footer ul.icons a {
-			box-shadow: inset 0 0 0 1px #d6d6d6;
+			box-shadow: inset 0 0 0 1px #aaa;
 		}
 
 /* Wide */
