--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,7 @@ input, select, textarea {
 		-webkit-transition: border-bottom-color 0.25s ease-in-out;
 		-ms-transition: border-bottom-color 0.25s ease-in-out;
 		transition: border-bottom-color 0.25s ease-in-out;
-		color: inherit;
+		/* color: inherit; */
 		text-decoration: none;
 		border-bottom: dotted 1px rgba(0, 0, 0, 0.25);
 	}
@@ -2156,7 +2156,7 @@ input, select, textarea {
 	}
 
 		.icon:before {
-			-moz-osx-font-smoothing: grayscale;
+			/* -moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
 			display: inline-block;
 			font-style: normal;
@@ -2165,7 +2165,7 @@ input, select, textarea {
 			line-height: 1;
 			text-transform: none !important;
 			font-family: 'Font Awesome 5 Free';
-			font-weight: 400;
+			font-weight: 400; */
 		}
 
 		.icon:before {
@@ -2181,7 +2181,7 @@ input, select, textarea {
 		}
 
 		.icon.brands:before {
-			font-family: 'Font Awesome 5 Brands';
+			/* font-family: 'Font Awesome 5 Brands'; */
 		}
 		i {
 			color:#000;
